@@ -1777,7 +1777,7 @@ These are all ASCII characters except a-zA-Z0-9 and space:
 
 \texttt{!!!"{}"{}"\#\#\#\$\$\$\%\%\%\&\&\&'{}'{}'((()))***+++,{},{},-{}-{}-...///:::}
 
-\texttt{;;;<{}<{}<===>{}>{}>???@@@{[}{[}{[}\reflectbox{/}{}\reflectbox{/}{}\reflectbox{/}{}{]}{]}{]}\textasciicircum{}\textasciicircum{}\textasciicircum{}\underline{ }\underline{ }\underline{ }`{}`{}`\{\{\{|||\}\}\}\textasciitilde{}\textasciitilde{}\textasciitilde{}}
+\texttt{;;;<{}<{}<===>{}>{}>???@@@{[}{[}{[}\reflectbox{/}\reflectbox{/}\reflectbox{/}{]}{]}{]}\textasciicircum{}\textasciicircum{}\textasciicircum{}\underline{~}\underline{~}\underline{~}`{}`{}`\{\{\{|||\}\}\}\textasciitilde{}\textasciitilde{}\textasciitilde{}}
 
 \texttt{xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}
 
@@ -1822,13 +1822,13 @@ right pointing guillemet
  \\
 \hline
 
-{--}
+\textendash{}
  & 
 en-dash
  \\
 \hline
 
-{---}
+\textemdash{}
  & 
 em-dash
  \\
@@ -1846,25 +1846,25 @@ single comma quotation mark
  \\
 \hline
 
-,
+\quotesinglbase{}
  & 
 low single comma quotation mark
  \\
 \hline
 
-``
+\textquotedblleft{}
  & 
 double turned comma quotation mark
  \\
 \hline
 
-''
+\textquotedblright{}
  & 
 double comma quotation mark
  \\
 \hline
 
-,,
+\quotedblbase
  & 
 low double comma quotation mark
  \\
@@ -1933,7 +1933,7 @@ The following characters play a special role in LaTeX and are called
 The special chars verbatim:
 %
 \begin{quote}{\ttfamily \raggedright \noindent
-\#~\$~\%~\&~\textasciitilde{}~\underline{~}~\textasciicircum{}~\reflectbox{/}{}~\{~\}
+\#~\$~\%~\&~\textasciitilde{}~\underline{~}~\textasciicircum{}~\reflectbox{/}~\{~\}
 }
 \end{quote}
 
